[project]
name = "goknowhub"
version = "0.1.0"
description = ""
authors = [
    {name = "George Gorlov",email = "Georgiy.Gorlov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "ipython (>=9.5.0,<10.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django (>=5.2.6,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "coverage (>=7.10.7,<8.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "drf-yasg (>=1.21.11,<2.0.0)",
    "dj-stripe (>=2.10.1,<3.0.0)",
    "coreapi (>=2.3.3,<3.0.0)"
]
# Добавляем dj-stripe с указанием версии Python
dj-stripe = { version = "^2.10.1", markers = "python_version >= '3.13' and python_version < '4.0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
